Update reply list conversion to return immutable list
Change toList() method to return an immutable list.